--- a/src/components/Props/Props.scss
+++ b/src/components/Props/Props.scss
@@ -1,14 +1,12 @@
 .props{
     width: 100%;
     display: flex;
+    height: 800px;
     flex-direction: column;
-    margin-top: 90px;
     align-items: center;
-    justify-content: center;
-    gap: 10px;
-    padding: 50px 0;
-    border: 1px solid red;
-    
+    justify-content: start;
+    gap: 20px;
+    padding: 30px 0;
     &__subtitle{
         width: 100%;
         display: flex;
@@ -20,9 +18,11 @@
     }
     &__collection{
         display: flex;
-        align-items: center;
+        align-items: start;
         justify-content: center;
         gap: 30px;
+        flex: 1;
+        margin-bottom: 20px;
     }
     &__item{
         font-size: 24px;
@@ -31,6 +31,41 @@
     }
     &__img{
         width: 100%;
-        border: 1px solid blue;
+    }
+    &__title{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 42px;
+        font-weight: 800;
+        line-height: 56px;    
+    }
+    &__desc{
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 24px;
+    }
+    &__btn{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        button{
+            padding: 10px 20px;
+            background: #000;
+            color: #fff;
+            font-size: 18px;
+            font-weight: 500;
+            line-height: 24px;
+            border-radius: 40px;
+            transition: .5s;
+        }
+        button:hover{
+            cursor: pointer;
+            border: 1px solid #000;
+            background: #fff;
+            color: #000;
+        }
     }
 }
